--- a/globalcollect_gateway/forms/html/rtbt/rtbt-enets.html
+++ b/globalcollect_gateway/forms/html/rtbt/rtbt-enets.html
@@ -41,37 +41,21 @@
 					<div id="donate-content">
 						<div id="donate-body" style="padding: 0 1em;">
 							<form method="post" name="paypalcontribution">
-								<div id="step1header"><h3>%donate_interface-amount-legend% <span id="selected-amount"></span> <span class="mute" id="change-amount" style="display: none;">(<a href="#">%donate_interface-change%</a>)</span></h3></div>
-								<div id="step1wrapper" style="display: none;">
-									<div id="amtErrorMessages" class="small"></div>
-									<table id="amount-table-white">
-										<tr>
-											<td><label><input id="amountRadio0" type="radio" name="amountRadio" value="5" /> <span id="amountSpan0">5</span></label></td>
-											<td><label><input id="amountRadio1" type="radio" name="amountRadio" value="10" /> <span id="amountSpan1">10</span></label></td>
-											<td><label><input id="amountRadio2" type="radio" name="amountRadio" value="20" /> <span id="amountSpan2">20</span></label></td>
-											<td><label><input id="amountRadio3" type="radio" name="amountRadio" value="50" /> <span id="amountSpan3">50</span></label></td>
-										</tr>
-										<tr>
-											<td><label><input id="amountRadio4" type="radio" name="amountRadio" value="75" /> <span id="amountSpan4">75</span></label></td>
-											<td><label><input id="amountRadio5" type="radio" name="amountRadio" value="100" /> <span id="amountSpan5">100</span></label></td>
-											<td><label><input id="amountRadio6" type="radio" name="amountRadio" value="250" /> <span id="amountSpan6">250</span></label></td>
-											<td><input type="radio" name="amountRadio" id="input_amount_other" value="other" /> <label><span id="amountSpanOther"></span><input type="text" class="txt-sm hint"  name="amountGiven" size="4" id="other-amount" title="%donate_interface-other%" placeholder="%donate_interface-other%"  onfocus="this.form.input_amount_other.checked=true;"/></label></td>
-										</tr>
-									</table>
-								</div>
+								<div id="step1header"><h3>%donate_interface-amount-legend% <span id="selected-amount"></span></h3></div>
+								
 								<div id="step2header"><h3>%donate_interface-billing-address% <span class="mute" id="change-billing" style="display: none;">(<a href="#">%donate_interface-change%</a>)</span></h3></div>
 								<div id="step2wrapper">
 									<div id="billing-content" class="gainlayout">
 										<div id="billingErrorMessages" class="small"></div>
 										<div id="paymentErrorMessages" class="small"></div>
-										<div class="name-fields">
-											<span class="name-first"><input class="txt" id="fname" name="fname" title="%donate_interface-donor-fname%" value="@fname" placeholder="%donate_interface-donor-fname%"/></span>
-											<span class="name-last"><input class="txt" id="lname" name="lname" title="%donate_interface-donor-lname%" value="@lname" placeholder="%donate_interface-donor-lname%"/></span>
-										</div>
-										<div class="loc-fields nostate">
-											<span class="loc-street"><input class="txt" id="street" name="street" title="%donate_interface-donor-street%" value="@street" placeholder="%donate_interface-donor-street%"/></span>
-											<span class="loc-city"><input class="txt" id="city" name="city" title="%donate_interface-donor-city%" value="@city" placeholder="%donate_interface-donor-city%"/></span>											
-											<span class="loc-postal"><input class="txt" id="zip" name="zip" title="%donate_interface-donor-postal%" value="@zip" placeholder="%donate_interface-donor-postal%"/></span>
+										<!--<div class="name-fields">-->
+											<!--<span class="name-first"><input class="txt" id="fname" name="fname" title="%donate_interface-donor-fname%" value="@fname" placeholder="%donate_interface-donor-fname%"/></span>-->
+											<!--<span class="name-last"><input class="txt" id="lname" name="lname" title="%donate_interface-donor-lname%" value="@lname" placeholder="%donate_interface-donor-lname%"/></span>-->
+										<!--</div>-->
+										<div class="nostate">
+											<!--<span class="loc-street"><input class="txt" id="street" name="street" title="%donate_interface-donor-street%" value="@street" placeholder="%donate_interface-donor-street%"/></span>-->
+											<!--<span class="loc-postal"><input class="txt" id="zip" name="zip" title="%donate_interface-donor-postal%" value="@zip" placeholder="%donate_interface-donor-postal%"/></span>-->
+											<!--<span class="loc-city"><input class="txt" id="city" name="city" title="%donate_interface-donor-city%" value="@city" placeholder="%donate_interface-donor-city%"/></span>-->
 											<span class="loc-country">
 												<select class="txt" id="country" name="country" value="@country" placeholder="%donate_interface-country%">
 													<option value="">%donate_interface-select-country%</option>
@@ -79,8 +63,14 @@
 												</select>
 											</span>
 										</div>
-										<p><input class="txt" title="%donate_interface-donor-email%" id="emailAdd" name="emailAdd" value="@emailAdd" placeholder="%donate_interface-donor-email%"/> </p>
-										<div id="bt-continue" style="margin-top: 10px;"> <input class="btn" id="bt-continueBtn" type="button" value="%donate_interface-continue%" /></div>
+										<!--<p><input class="txt" title="%donate_interface-donor-email%" id="emailAdd" name="emailAdd" value="@emailAdd" placeholder="%donate_interface-donor-email%"/> </p>-->
+										<table style="margin-top: 10px;" >
+											<tr><td>
+												<div id="bt-continue" style="margin-top: 7px;"> <input class="btn" id="bt-continueBtn" type="button" value="%donate_interface-continue%" /></div>
+											</td><td>
+												<img style="margin-left: 20px;" src="@script_path/extensions/DonationInterface/gateway_forms/includes/enets_logo2" width="50" alt="eNets">
+											</td></tr>
+										</table>
 									</div>
 								</div>
 
@@ -113,7 +103,13 @@
 								<input type="hidden" value="rtbt" name="payment_method"/>
 								<input type="hidden" value="rtbt_enets" name="payment_submethod"/>
 								<!-- required fields omitted above -->
-								<input type="hidden" value="XX" name="state"/>
+								<input type="hidden" value="John" name="fname" id="fname" />
+								<input type="hidden" value="Doe" name="lname" id="lname" />
+								<input type="hidden" value="n/a" name="street" id="street" />
+								<input type="hidden" value="n/a" name="city" id="city" />
+								<input type="hidden" value="XX" name="state" id="state" />
+								<input type="hidden" value="00000" name="zip" id="zip" />
+								<input type="hidden" value="nobody@wikimedia.org" name="emailAdd" id="emailAdd" />
 							</form>
 							<div id="where-content">
 								{{LanguageSwitch|2011FR/core-appeal-whitebox-nodiv|@language}}
